--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Jazmin</title>
 </head>
 <body>
-
+<h1>Jazmin Buenrostro - Version 2</h1>
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
