--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<!--
+    Author: Jazmin Buenrostro
+-->
 <head>
-<title>Jazmin</title>
+<body style="background-color:tan;">
+    <meta charset="UTF-8">
+    <title>Getting to Know You</title>
+    <link rel="stylesheet" href="getting-to-know-you2.css">
+    <h1 style="text-align:center;">Jazmin Buenrostro</h1>
+    <h2 style="text-align:center;" Lewis Email>
+    <p><a href="mailto: jazminmbuenrostro@lewisu.edu">jazminmbuenrostro@lewisu.edu</a></p> </h2>
 </head>
 <body>
-<h1>Jazmin Buenrostro - Version 2</h1>
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+    <img src="jaz100519.jpg" alt="Jazmin's Picture" class="center" style="width:300px;">
+    <h3 style="text-align:center;" > <span style="border: 1px solid black" class="intro">Introduction</span></h3>
+    <div class="background">
+    <p style="text-align:center;" style="color: white" > My name is Jazmin Buenrostro. I am a Junior at Lewis and I'm studying Computer Science + Music. I am currently the youngest of two older sisters, who go by the names of Amanda and Jackie. 
+        <br>
+        I was born and raised in Chicago for the first 6 years of my life, and then moved to Plainfield, IL to begin first grade. I have moved in different areas all across Plainfield, living in 5 different houses in my lifetime already.
+        <br>
+        I currently work at Geek Squad, where I am getting a lot of my computer experience, and I graduated from Joliet Junior College with an Associates in Arts in Music in 2020.
+        <br>
+    </div> 
+    <div class="points">
+    <h4 style="text-align:center" class= "subintro">What I Hope to Learn in this Course</h4>
+    <ul style="list-style-type:square; text-align:center; list-style-position:inside;" >
+        <li>Better programming skills</li>
+        <li>More knowledge about the specifics of website development</li>
+        <li>Learning detailed information about different computer components</li>
+      </ul>
+    </div> 
+    <h3 style="text-align:center;" ><span style="border: 1px solid black" class="intro">My Favorite Hobby</span> </h3>
+    <div class="background">
+    <p style="text-align:center;">During my free time I like to play piano, guitar, or ukulele. I want to, at one point, get into songwriting as well. 
+        <br>
+    I am taking an Intro to Recording and Computer Music class at the moment which is inspiring me to want to write and record my own music. Hopefully down the road, I can explore songwriting a bit more. 
+    <br>
+    </div>
+    <div class="points">
+    <h4 style="text-align:center;" class= "subintro">Greatest Innovations</h4>
+    <ul style="list-style-type:square; text-align:center; list-style-position:inside;">
+        <li>First computer program to run a on a computer was in 1948. </li>
+        <p><a href="https://www.computerhistory.org/timeline/computers/">computerhistory.org</a></p>
+        <li>Grace Hopper develops the first computer language in 1953, which then transitioned to what we know as COBOL.</li>
+        <p><a href="https://www.livescience.com/20718-computer-history.html">livescience.com</a></p>
+        <li>Wifi becomes part of the language of the computers, which allowed for users to connect to Internet without wires.</li>
+        <p><a href="https://www.livescience.com/20718-computer-history.html">livescience.com</a></p>
+      </ul>
+    </div>
+    <div class="fact">
+      <h4 style="text-align:center;">Fun Fact</h4>
+      <p style="text-align:center;">A fun fact about me is that I've been professionally involved with music for the past 13 years of my life and I also was involved in theater for 9 years of my life as well.
+    </div>
 </body>
 </html>
